--- a/site/umidade.html
+++ b/site/umidade.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Temperatura</title>
+    <title>humidade</title>
     <meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"
         type="text/javascript"></script>
@@ -22,13 +22,14 @@
         </a>
     </div>
     <div id="capa">
-        a temperatura atual é:
-        <div id="temperatura">
+        e a humildade atual é:
+        <div id="humidade">
         </div>
-        <br>
         <br>
         o broker de michael é um cu ent essa merda vai demorar
         contente-se mero usuário
+
+        <br>
     </div>
 
     <div id="rodape">
@@ -37,7 +38,7 @@
         </h3>
     </div>
     <div id="pos_rodapé">
-        <script src="../mqtt/subscriber/temp.js"></script>
+        <script src="../mqtt/subscriber/humd.js"></script>
     </div>
 </body>
 
