--- a/site/temperatura.html
+++ b/site/temperatura.html
@@ -24,20 +24,13 @@
     <div id="capa">
         a temperatura atual é:
         <div id="temperatura">
+            aguarde
         </div>
         <br>
-        <br>
-        o broker de michael é um cu ent essa merda vai demorar
-        contente-se mero usuário
     </div>
 
-    <div id="rodape">
-        <h3>
-            Gabriel Sales </br> Michael Monteiro de Lima </br> Miryan Estábila <br></br> 2020.1 / 2023.1(se Deus quiser)
-        </h3>
-    </div>
     <div id="pos_rodapé">
-        <script src="../mqtt/subscriber/temp.js"></script>
+        <script src="temperatura.js"></script>
     </div>
 </body>
 
