--- a/site/umidade.html
+++ b/site/umidade.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>humidade</title>
+    <title>umidade</title>
     <meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"
         type="text/javascript"></script>
@@ -22,23 +22,16 @@
         </a>
     </div>
     <div id="capa">
-        e a humildade atual é:
+        e a umidade atual é:
         <div id="humidade">
+            aguarde
         </div>
         <br>
-        o broker de michael é um cu ent essa merda vai demorar
-        contente-se mero usuário
-
         <br>
     </div>
 
-    <div id="rodape">
-        <h3>
-            Gabriel Sales </br> Michael Monteiro de Lima </br> Miryan Estábila <br></br> 2020.1 / 2023.1(se Deus quiser)
-        </h3>
-    </div>
     <div id="pos_rodapé">
-        <script src="../mqtt/subscriber/humd.js"></script>
+        <script src="umidade.js"></script>
     </div>
 </body>
 
