--- a/site/controle.html
+++ b/site/controle.html
@@ -2,15 +2,13 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Temperatura</title>
+    <title>controle</title>
     <meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"
-        type="text/javascript"></script>
-    <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
-    <link rel="stylesheet" href="../mqtt/subscriber/subscriber.css">
+    type="text/javascript"></script>
+<script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
-
 </head>
 
 <body>
@@ -24,22 +22,26 @@
                 alt="Logo Instituto Federal" width="128" height="168">
         </a>
     </div>
+    </div>
     <div id="capa">
-        <button type="button" class="btn btn-primary">Ligar Ar-condicionado</button>
-        <button type="button" class="btn btn-secondary" onclick="desligarTrem()">Desligar Ar-condicionado</button>
-        <button type="button" class="btn btn-success">Aumentar temperatura</button>
-        <button type="button" class="btn btn-danger">Diminuir temperatura</button>
+        <h2>
+            Controle Remoto
+            <br>
+            Ar-Condicionado
+            <br>
+            <br>
+        </h2>
+        <button type="button" class="btn btn-success" onclick="ligarTrem()">Ligar Ar-condicionado</button>
+        <button type="button" class="btn btn-danger" onclick="desligarTrem()">Desligar Ar-condicionado</button>
+        <button type="button" class="btn btn-primary" onclick="aumentarTrem()">Aumentar temperatura</button>
+        <button type="button" class="btn btn-secondary" onclick="diminuirTrem()">Diminuir temperatura</button>
     <br>
     </div>
     <br>
     <br>
 
-    <div id="rodape">
-        <h3>
-            Gabriel Sales </br> Michael Monteiro de Lima </br> Miryan Estábila <br></br> 2020.1 / 2023.1(se Deus quiser)
-        </h3>
-    </div>
-    <script defer src="../mqtt/publisher/publisher.js"></script>
+
+    <script defer src="controle.js"></script>
 
 </body>
 
