--- a/site/nivel.html
+++ b/site/nivel.html
@@ -16,7 +16,7 @@
 
         <div id="header">
             <h1>
-                IF Resources abc
+                IF Resources
             </h1>
             <a href="index.html">
                 <img
